Agregadas busquedas por api
Ahora se puede buscar a un libro por subtérminos para géneros, autores y títulos
