# storage/api-docs/api-docs.json
@@ -230,6 +230,138 @@
                 }
             }
         },
+        "/libros/{termino}/searchTitle": {
+            "get": {
+                "tags": [
+                    "Libros"
+                ],
+                "description": "Devuelve los libros que contengan en su titulo el termino especificado",
+                "operationId": "98c04253b34d6d0edf80f27e2cdabe6b",
+                "parameters": [
+                    {
+                        "name": "termino",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Libros encontrados",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/LibroShow"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No se encontraron libros con el termino especificado",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "error": "No se encontraron libros con el termino especificado"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/libros/{genero}/searchGenre": {
+            "get": {
+                "tags": [
+                    "Libros"
+                ],
+                "description": "Devuelve los libros que contengan el termino especificado en el parametro",
+                "operationId": "4a56da8964d52fdaf327882c11128106",
+                "parameters": [
+                    {
+                        "name": "genero",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Libros encontrados",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/LibroShow"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No se encontraron libros con el genero especificado",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "error": "No se encontraron libros con el genero especificado"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/libros/{nombreAutor}/searchAuthor": {
+            "get": {
+                "tags": [
+                    "Libros"
+                ],
+                "description": "Devuelve los libros escritos por el autor especificado. El parametro puede contener mas de un nombre o apellido siempre y cuando esten separados por espacios.",
+                "operationId": "43911efbde908d23122c5def2f76cf1c",
+                "parameters": [
+                    {
+                        "name": "nombreAutor",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Libros encontrados",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/LibroShow"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No se encontraron libros con los autores especificado",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "error": "No se encontraron libros con los autores especificado"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/pedidos": {
             "post": {
                 "tags": [
